Add Windows to CI build matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os:
-          # TODO: - windows-latest
+          - windows-latest
           # TODO: - macOS-latest
           - ubuntu-latest
     steps:
