--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Install libnotify development headers
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get install -y libnotify-dev
-      - run: |
+      - name: Build OBS plugin
+        run: |
           mkdir ./build/
           cd ./build/
           cmake ..
