In-source builds because fuck CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,68 +1,40 @@
-cmake_minimum_required(VERSION 3.12)
-project("OBS Notifications Plugin" VERSION 0.0.1)
+project(obs-notifications)
+
+if(DISABLE_NOTIFICATIONS)
+	message(STATUS "Notification support disabled")
+	return()
+endif()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_CXX_EXTENSIONS false)
 
-include(CheckIncludeFile)
-include(FetchContent)
-set(FETCHCONTENT_QUIET NO)
+include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
+
+set(obs-notifications_SOURCES
+		src/obs_notifications.cpp)
+add_library(obs-notifications MODULE
+		${obs-notifications_SOURCES})
+target_link_libraries(obs-notifications
+		libobs)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 	find_package(PkgConfig REQUIRED)
 	pkg_check_modules(LIBNOTIFY libnotify glib-2.0 gdk-pixbuf-2.0)
 	if(LIBNOTIFY_FOUND)
 		include_directories(${LIBNOTIFY_INCLUDE_DIRS})
+		target_link_libraries(obs-notifications notify)
 	endif()
 endif()
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR "${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-	FetchContent_Declare(
-			WinToast
-			GIT_REPOSITORY		https://github.com/mohabouje/WinToast.git
-			GIT_REMOTE_NAME		github
-			GIT_TAG				v1.2.0
-			GIT_SHALLOW			YES
-			GIT_PROGRESS		YES
-	)
-	message(STATUS "Fetching WinToast...")
-	FetchContent_Populate(WinToast)
-	include_directories("${WinToast_SOURCE_DIR}/src/")
 
-	set(HAVE_WINTOAST YES)
-endif()
-
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/Config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/src/Config.hpp)
-
-add_library(obs-notifications MODULE src/NotificationPlugin.cpp)
-if(LIBNOTIFY_FOUND)
-	target_link_libraries(obs-notifications notify)
-endif()
-
-# Out-of-source plugin builds are unsupported by OBS
-# This is a dirty hack...
-message(STATUS "Fetching OBS...")
-FetchContent_Declare(
-		obs-studio
-		GIT_REPOSITORY  https://github.com/obsproject/obs-studio.git
-		GIT_REMOTE_NAME github
-		GIT_TAG         24.0.3
-		GIT_SHALLOW		YES
-		GIT_PROGRESS	YES
-)
-FetchContent_Populate(obs-studio)
-include_directories(
-		SYSTEM
-		"${obs-studio_SOURCE_DIR}"
-		"${obs-studio_SOURCE_DIR}/UI/obs-frontend-api/"
-		"${obs-studio_SOURCE_DIR}/libobs/")
 target_include_directories(obs-notifications
 		PUBLIC
 		"${PROJECT_BINARY_DIR}/src/")
 
-# See: https://github.com/obsproject/obs-studio/blob/master/cmake/Modules/ObsHelpers.cmake#L550-L553
-#[[
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${obs-studio_SOURCE_DIR}/cmake/Modules/")
-include(ObsHelpers)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/src/config.hpp)
+
+message("${CMAKE_CURRENT_SOURCE_DIR}/src/config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/src/config.hpp")
+
+set_target_properties(obs-notifications PROPERTIES FOLDER "plugins")
+
 install_obs_plugin_with_data(obs-notifications data)
-]]
